Implemented configuration override